--- a/front/src/App.css
+++ b/front/src/App.css
@@ -7,7 +7,7 @@
 
 /* CSS Reset */
 
-*, *::before, *::after {
+/* *, *::before, *::after {
   box-sizing: border-box;
 }
 
@@ -35,7 +35,7 @@ input, button, textarea, select {
 
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
-}
+} */
 
 /* CSS implementation */
 
