--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding-bottom: 2rem;
   text-align: center;
 }
 
@@ -42,4 +42,8 @@ p, h1, h2, h3, h4, h5, h6 {
 .App {
   display: flex;
   flex-direction: column;
+}
+
+.App h1{
+  margin-top: 3rem;
 }
